最终版本~完结撒花~

--- a/res.qrc
+++ b/res.qrc
@@ -3,12 +3,18 @@
         <file>res/images/Begin Button.jfif</file>
         <file>res/images/Enemy.png</file>
         <file>res/images/Tower.png</file>
-        <file>res/images/Road.png</file>
         <file>res/images/Welcome.jfif</file>
         <file>res/images/TowerPlace.png</file>
         <file>res/images/map.jfif</file>
         <file>res/images/begin.jfif</file>
         <file>res/images/first.png</file>
         <file>res/images/second.png</file>
+        <file>res/images/Blue.png</file>
+        <file>res/images/Tower3.png</file>
+        <file>res/images/Road.png</file>
+        <file>res/images/Defeat.jpg</file>
+        <file>res/images/Win.jpg</file>
+        <file>res/images/Enemy2.jpg</file>
+        <file>res/music/back.mp3</file>
     </qresource>
 </RCC>
