进行了一些优化，真的是最终版本了！

--- a/res.qrc
+++ b/res.qrc
@@ -16,5 +16,6 @@
         <file>res/images/Win.jpg</file>
         <file>res/images/Enemy2.jpg</file>
         <file>res/music/back.mp3</file>
+        <file>res/images/Enemy3.png</file>
     </qresource>
 </RCC>
